# pcybox-sqlbuddy

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: basic_usage.py
sqlbuddy/: __init__.py  cli.py  sqlbuddy.py
sqlbuddy/core/: __init__.py  connector.py  schema_extractor.py
sqlbuddy/llm/: __init__.py  query_generator.py
sqlbuddy/utils/: __init__.py  logger.py  validators.py
tests/: test_connector.py  test_query_generator.py  test_schema_extractor.py
